# XIAO_ESP32C3_IDF_Sample

./: CMakeLists.txt  LICENSE  README.md  platformio.ini
components/lvgl_esp32_drivers/: CMakeLists.txt  Kconfig  lvgl_helpers.c  lvgl_helpers.h
components/lvgl_esp32_drivers/lvgl_tft/: Kconfig  ili9341.c  ssd1306.c
components/m5unit/: CMakeLists.txt  Kconfig  m5unit.h
components/m5unit/led/: led.c  led.h
components/m5unit/sht3x/: sht3x.c
components/m5unit/sk6812/: sk6812.c  sk6812.h
components/m5unit/st7032/: st7032.c  st7032.h
components/xiao/: CMakeLists.txt  Kconfig  xiao.c  xiao.h
components/xiao/button/: button.c  button.h
components/xiao/pcf8563/: pcf8563.c  pcf8563.h
components/xiao/sk6812/: sk6812.c
main/: CMakeLists.txt  SHT3X.c  main.c  ui.c  wifi.c
main/includes/: SHT3X.h  ui.h  wifi.h
